[gd_scene load_steps=15 format=3 uid="uid://cbc3bmu5diy5g"]

[ext_resource type="Script" uid="uid://dg76lqy2txmtv" path="res://Scripts/machines.gd" id="1_nmd0n"]
[ext_resource type="PackedScene" uid="uid://piqkba58rjtm" path="res://Assets/Kitchen/fridge_A.gltf" id="2_jjiis"]
[ext_resource type="PackedScene" uid="uid://clxcaw75ilk62" path="res://Assets/Kitchen/fridge_B.gltf" id="3_pyeor"]
[ext_resource type="PackedScene" uid="uid://dk1n5xqcqwknn" path="res://Assets/Kitchen/menu.gltf" id="4_2ji7t"]
[ext_resource type="PackedScene" uid="uid://b3le10u2klgpl" path="res://Assets/Kitchen/oven.gltf" id="5_1am7h"]
[ext_resource type="PackedScene" uid="uid://djkifp6uh173l" path="res://Assets/Kitchen/stove_multi.gltf" id="6_u75sx"]
[ext_resource type="PackedScene" uid="uid://c3vy1rl54imyn" path="res://Assets/Kitchen/stove_single.gltf" id="7_rs7h4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_272bh"]

[sub_resource type="Animation" id="Animation_dg77c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles3D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Machines:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_efxa6"]
resource_name = "destroy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Machines:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles3D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "normal"
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycdy4"]
_data = {
&"RESET": SubResource("Animation_dg77c"),
&"destroy": SubResource("Animation_efxa6"),
&"normal": SubResource("Animation_ycdy4")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_efxa6"]
albedo_color = Color(0.77084, 0.770839, 0.770839, 1)

[sub_resource type="PrismMesh" id="PrismMesh_dg77c"]
material = SubResource("StandardMaterial3D_efxa6")
size = Vector3(0.25, 0.25, 0.25)

[node name="Machines" type="StaticBody3D"]
script = ExtResource("1_nmd0n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_272bh")

[node name="Machines" type="Node3D" parent="."]

[node name="fridge1" parent="Machines" instance=ExtResource("2_jjiis")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0)
visible = false

[node name="fridge2" parent="Machines" instance=ExtResource("3_pyeor")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0)
visible = false

[node name="menu" parent="Machines" instance=ExtResource("4_2ji7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false

[node name="oven" parent="Machines" instance=ExtResource("5_1am7h")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0)
visible = false

[node name="stove1" parent="Machines" instance=ExtResource("6_u75sx")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0)
visible = false

[node name="stove2" parent="Machines" instance=ExtResource("7_rs7h4")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ycdy4")
}

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
emitting = false
amount = 16
lifetime = 0.42
mesh = SubResource("PrismMesh_dg77c")
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_rotate_y = true
direction = Vector3(0, 1, 0)
spread = 10.13
gravity = Vector3(0, -24, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
angular_velocity_min = 425.97
angular_velocity_max = 720.0
